--- a/Lczed_MvpBase/build.gradle
+++ b/Lczed_MvpBase/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     //权限申请
-    implementation 'com.permissionx.guolindev:permissionx:1.3.0'
+    implementation 'com.permissionx.guolindev:permissionx:1.4.0'
     //透明状态栏
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
 
@@ -60,4 +60,18 @@ dependencies {
 
     // 必要rxjava2依赖
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    //smartrefreshlayout 加载框架
+    implementation  'com.scwang.smart:refresh-layout-kernel:2.0.1'      //核心必须依赖
+    implementation  'com.scwang.smart:refresh-header-classics:2.0.1'    //经典刷新头
+    implementation  'com.scwang.smart:refresh-header-radar:2.0.1'       //雷达刷新头
+    implementation  'com.scwang.smart:refresh-header-falsify:2.0.1'     //虚拟刷新头
+    implementation  'com.scwang.smart:refresh-header-material:2.0.1'    //谷歌刷新头
+    implementation  'com.scwang.smart:refresh-header-two-level:2.0.1'   //二级刷新头
+    implementation  'com.scwang.smart:refresh-footer-ball:2.0.1'        //球脉冲加载
+    implementation  'com.scwang.smart:refresh-footer-classics:2.0.1'    //经典加载
+
+    //eventbus
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
 }
